# power-monitor

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  _typos.toml  build.rs  deny.toml  release-crate.sh
.github/: apply-settings.sh  dependabot.yml  settings.json
.github/workflows/: ci.yml  supply-chain.yml
app/: .gitignore  BoxLayout.swift  Info.plist  PowerMonitorMenuBar.swift  README.md  build.sh  layout_check.swift  notarize.sh  release-app.sh  release-notes.md  render_fleet.swift  render_gag.swift
benches/: hot_paths.rs
examples/: basic.rs  energy.rs  full_metrics.rs
homebrew/: power-monitor.rb
include/: power_monitor.h
man/: power-monitor.1
src/: args.rs  collect_cmd.rs  completion_cmd.rs  dashboard.html  doctor_cmd.rs  event.rs  fan_cmd.rs  ffi.rs  http.rs  ioreport.rs  lib.rs  main.rs  man_cmd.rs  memory.rs  pipe_cmd.rs  sampler.rs  seqlock.rs  serialize.rs  serve_cmd.rs  soc.rs
tests/: collector_http.rs  no_alloc.rs
tools/: probe.rs
